<resources>
    <string name="app_name">National Quiz</string>
    <string name="startGame">Start game</string>
    <string name="capitalCities">Capital cities</string>
    <string name="countriesFlags">Countries flags</string>
    <string name="neighboringCountries">Neighboring countries</string>
    <string name="sights">Sights</string>
    <string name="areYouSure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_maps">Map</string>
    <string name="capitalCitiesQuestion">Which of these cities is the capital city of  </string>
    <string name="countrySightsQuestion">Sights from the picture is from which country ?</string>
    <string name="neighboringCountryQuestion">Which of these countries is neighboring  </string>
    <string name="countryFlagQuestion">The flag of which country is in the picture? (Use the offered letters)</string>
    <string name="language">Language</string>
    <string name="selectLanguage">Select language</string>
    <string name="settings">Settings</string>
    <string name="numberOfQuestions">Number of questions</string>
    <string name="enterNumberOfQuestions">Enter number of questions</string>
    <string name="questions">Questions</string>
    <string name="question">Question : </string>
    <string name="nextQuestion">Next question</string>
    <string name="noMoreHints">No more hints</string>
    <string name="hint">Hint :</string>
    <string name="correctAnswer"> Correct answer</string>
    <string name="incorrectAnswer">Incorrect answer</string>
    <string name="currentScore">Current score :</string>
    <string name="finalScore">Final score: </string>
    <string name="thisIsLastQuestion">This is last question.</string>
    <string name="endOfGame">End of game</string>
    <string name="name">Player name :</string>
    <string name="save">Save</string>
    <string name="gameHistory">Game history</string>
    <string name="share">Share</string>
    <string name="details">Details</string>
    <string name="gameDetails">Game details</string>
    <string name="answer">Answer :</string>
    <string name="newsCaching">News caching</string>
    <string name="serbian">Serbian</string>
    <string name="english">English</string>
    <string name="cachingOn">News caching is on</string>
    <string name="cachingOff">News caching is off</string>
    <string name="caching">Caching</string>
    <string name="news">News</string>
    <string name="noInternetConnection">No internet connection</string>
    <string name="facebookAppId">386641319784381</string>
    <string name="facebookLoginProtocol_scheme">fb386641319784381</string>
    <string name="youHaveToGiveAnAnswer">You have to give an answer</string>
    <string name="youHaveGivenAnAnswer">You have given an answer</string>
    <string name="noCachedNews">No cached news</string>
    <string name="resultSaved">Result is saved</string>
    <string name="source">Source</string>
    <string name="date">Date</string>
</resources>