<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/gameLogoIv"
        android:layout_width="261dp"
        android:layout_height="253dp"
        android:src="@drawable/globe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.068" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameLogoIv">


        <Button
            android:id="@+id/startGameBtn"
            android:layout_width="247dp"
            android:layout_height="78dp"
            android:text="@string/startGame"
            android:textSize="19sp" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="247dp"
            android:layout_height="78dp"
            android:text="@string/settings"
            android:textSize="19sp" />

        <Button
            android:id="@+id/gameHistoryBtn"
            android:layout_width="247dp"
            android:layout_height="78dp"
            android:text="@string/gameHistory"
            android:textSize="19sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>