<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_gravity="center_horizontal"
           android:padding="10dp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="20sp"
               android:text="@string/areYouSure"/>

       </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/yesBtn"
                android:text="@string/yes"
                android:layout_width="100dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/noBtn"
                android:text="@string/no"
                android:layout_width="100dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"/>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>