<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mySecondary"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/finalResultTv"
            android:layout_width="230dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/textColor"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.281"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/name"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/enteredNameEt"
                android:layout_width="180dp"
                android:layout_height="44dp"
                android:contextClickable="false"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="150dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="20dp"
                android:text="@string/endOfGame"
                android:textSize="15sp" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="120dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:text="@string/save"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>