<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".games.CountryFlagActivity">

    <TextView
        android:id="@+id/numOfQuestionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/currentScoreTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/numOfQuestionTv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/numOfQuestionTv"
        app:layout_constraintTop_toBottomOf="@+id/numOfQuestionTv"
        app:layout_constraintVertical_bias="0.039" />

    <ImageView
        android:id="@+id/imageHolderIv"
        android:layout_width="350dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/questionTv"
        android:layout_width="297dp"
        android:layout_height="84dp"
        android:text="@string/countryFlagQuestion"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageHolderIv"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/imageHolderIv"
        app:layout_constraintTop_toBottomOf="@+id/imageHolderIv"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/lettersTv"
        android:layout_width="297dp"
        android:layout_height="54dp"
        android:layout_marginTop="14dp"
        android:background="@color/grey"
        android:gravity="center"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/questionTv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/questionTv"
        app:layout_constraintTop_toBottomOf="@+id/questionTv"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/answerEt"
        android:layout_width="236dp"
        android:layout_height="61dp"
        android:autofillHints="@string/answer"
        android:clickable="false"
        android:cursorVisible="true"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textCursorDrawable="@null"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageHolderIv"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="@+id/imageHolderIv"
        app:layout_constraintTop_toBottomOf="@+id/imageHolderIv"
        app:layout_constraintVertical_bias="0.576" />

    <ImageButton
        android:id="@+id/hintBtn"
        android:layout_width="59dp"
        android:layout_height="43dp"
        android:background="@color/myPrimary"
        app:layout_constraintBottom_toTopOf="@+id/imageHolderIv"
        app:layout_constraintEnd_toEndOf="@+id/imageHolderIv"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageHolderIv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897"
        app:srcCompat="@drawable/ic_hint" />

    <ImageButton
        android:id="@+id/enterAnswerBtn"
        android:layout_width="59dp"
        android:layout_height="43dp"
        android:layout_marginStart="2dp"
        android:background="@color/myPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/answerEt"
        app:layout_constraintEnd_toEndOf="@+id/lettersTv"
        app:layout_constraintStart_toEndOf="@+id/answerEt"
        app:layout_constraintTop_toTopOf="@+id/answerEt"
        app:srcCompat="@drawable/ic_enter_answer" />

    <TextView
        android:id="@+id/hintNumberTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/hintBtn"
        app:layout_constraintEnd_toStartOf="@+id/hintBtn"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hintBtn" />

    <Button
        android:id="@+id/nextQuestionBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/nextQuestion"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageHolderIv"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageHolderIv"
        app:layout_constraintTop_toBottomOf="@+id/answerEt"
        app:layout_constraintVertical_bias="0.417" />

    <Button
        android:id="@+id/endGameBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/endOfGame"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/nextQuestionBtn"
        app:layout_constraintEnd_toEndOf="@+id/imageHolderIv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageHolderIv"
        app:layout_constraintTop_toTopOf="@+id/nextQuestionBtn"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>