<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".games.CountrySightsActivity">


    <TextView
        android:id="@+id/numOfQuestionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/currentScoreTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/numOfQuestionTv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/numOfQuestionTv"
        app:layout_constraintTop_toBottomOf="@+id/numOfQuestionTv"
        app:layout_constraintVertical_bias="0.039" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651">

        <ImageView
            android:id="@+id/imageHolderIv"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"

            />

        <TextView
            android:id="@+id/questionTv"
            android:layout_width="297dp"
            android:layout_height="84dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/capitalCitiesQuestion"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/answer1Btn"
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:textSize="17sp" />

        <Button
            android:id="@+id/answer2Btn"
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:textSize="17sp" />

        <Button
            android:id="@+id/answer3Btn"
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:textSize="17sp" />

        <Button
            android:id="@+id/answer4Btn"
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:textSize="17sp" />

    </LinearLayout>

    <Button
        android:id="@+id/nextQuestionBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/nextQuestion"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/endGameBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/endOfGame"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/nextQuestionBtn"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/nextQuestionBtn"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/hintBtn"
        android:layout_width="59dp"
        android:layout_height="43dp"
        android:layout_marginBottom="20dp"
        android:background="@color/myPrimary"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_hint" />

    <TextView
        android:id="@+id/hintNumberTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/hintBtn"
        app:layout_constraintEnd_toStartOf="@+id/hintBtn"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hintBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>